--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.1 - 2011-12-22
+----------------------------------------------------------------------
+- Added locale support to widgets.
+- Fix for login issues under certain conditions.
+
 1.6 - 2011-12-15
 ----------------------------------------------------------------------
 - Added recently imported comments widget.
