--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+1.6.2.1 - 2011-01-03
+----------------------------------------------------------------------
+- Silenced debug output.
+
 1.6.2 - 2011-12-27
 ----------------------------------------------------------------------
 - Workaround for late cookie setting issue.
