--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,14 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-1.6.2.1 - 2011-01-03
+2.0 - 2012-01-26
+----------------------------------------------------------------------
+- Added contextual help and pointer tutorial.
+- Added album shortcode.
+- Improved settings.
+- Improved performance.
+
+1.6.2.1 - 2012-01-03
 ----------------------------------------------------------------------
 - Silenced debug output.
 
