--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.1 - 2012-04-30
+----------------------------------------------------------------------
+- Deprecated offline_access.
+- Fix for title OpenGraph issue.
+- Fix for plugin conflict.
+- Added new permissions level (extras). 
+
 2.0.1 - 2012-03-24
 ----------------------------------------------------------------------
 - Improved OpenGraph tags generation.
