--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.2.1 - 2012-06-29
+----------------------------------------------------------------------
+- Fix for permissions check procedure.
+- Fix for button width issue.
+- Silenced some debug mode output.
+
+
 2.2 - 2012-06-15
 ----------------------------------------------------------------------
 - Fix for long-term tokens handling.
