--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.2.3 - 2012-07-25
+----------------------------------------------------------------------
+- Fix for limit attribute in albums shortcode.
+- Fix for protocol mismatch in mixed HTTPS/HTTP environments.
+
 2.2.2 - 2012-07-09
 ----------------------------------------------------------------------
 - Using bundled datepicker in events widget.
