--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.3 - 2012-08-09
+----------------------------------------------------------------------
+- Added OpenGraph metabox and augmented per-post overrides.
+- Central OpenGraph property handling.
+- Exposed more filters.
+
 2.2.3 - 2012-07-25
 ----------------------------------------------------------------------
 - Fix for limit attribute in albums shortcode.
