--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.5.3 - 2012-11-10
+----------------------------------------------------------------------
+- Recognizing Jetpack-encoded shortlinks.
+- Hierarchical data imports.
+
 2.5.2 - 2012-11-03
 ----------------------------------------------------------------------
 - Fix for overzealous avatar override.
