--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.5.4 - 2012-11-21
+----------------------------------------------------------------------
+- Added the Facebook avatars override option.
+- Added paged setting saves for large networks.
+- Added generic access token fallback for events graph api calls.
+- Fix for prefiltering checks.
+
 2.5.3 - 2012-11-10
 ----------------------------------------------------------------------
 - Recognizing Jetpack-encoded shortlinks.
