--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,12 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.6.5 - 2013-06-14
+----------------------------------------------------------------------
+- Settings for archive pages buttons.
+- Support for events limiting.
+- Fix for redirection issues with certaing parameters.
+
 2.6.4 - 2013-04-29
 ----------------------------------------------------------------------
 - Fix for scheduled semi-auto publishing.
