--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.6.6 - 2013-09-23
+----------------------------------------------------------------------
+- Fix for mixed content issue on registration page.
+- Fix for imported event timezones.
+- Better "more" tag handling in content publishing.
+- Added content filtering for image content.
+
 2.6.5 - 2013-06-14
 ----------------------------------------------------------------------
 - Settings for archive pages buttons.
