--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
+2.7.1 - 2014-06-5 - Umesh Kumar
+----------------------------------------------------------------------
+- Fixed warnings, fixed js reload on settings page
+- Fixed API Key status
+
 2.7 - 2014-05-16
 ----------------------------------------------------------------------
 - Added author notification for Facebook comments.
