Fixed albums widget
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/wpmu-dev-facebook@14770 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,8 +7,10 @@ Change Log:
 
 2.7.1 - 2014-06-5 - Umesh Kumar
 ----------------------------------------------------------------------
+- Updated code to support facebook API v2
+- Removed: Facebook events and notes support
+- Updated permission list
 - Fixed warnings, fixed js reload on settings page
-- Fixed API Key status
 
 2.7 - 2014-05-16
 ----------------------------------------------------------------------
