fixes facebook iframe protocol, warnings
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/wpmu-dev-facebook@14844 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Change Log:
 
 2.7.1 - 2014-06-5 - Umesh Kumar
 ----------------------------------------------------------------------
+- Fixed: Facebook Registration iframe src
 - Validate email for Facebook registrations
 - Updated code to support facebook API v2
 - Removed: Facebook events and notes support
