--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Author: Ve Bailovity (Incsub)
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+2.7.2 - - Umesh Kumar
+----------------------------------------------------------------------
 
 2.7.1 - 2014-06-5 - Umesh Kumar
 ----------------------------------------------------------------------
