--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Author: Ve Bailovity (Incsub)
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+2.7.1.1 - 2014-06-20 - Umesh Kumar
+- Added: Read Events from Facebook shortcode and widget
 
 2.7.1 - 2014-06-5 - Umesh Kumar
 ----------------------------------------------------------------------
