--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@ Change Log:
 ----------------------------------------------------------------------
 2.7.3 - 2014-07-30 - Umesh Kumar
 - Fixed: Album Shortcode
-- Fixed: Facebook comment form not displayed in some cases
+- Fixed: Facebook comment form not displayed if Override WordPress Settings is enabled
 
 2.7.2 - 2014-06-20 - Umesh Kumar
 - Added: Read Events from Facebook shortcode and widget
