--- a/changelog.txt
+++ b/changelog.txt
@@ -9,6 +9,7 @@ Change Log:
 - Fixed: Album Shortcode
 - Fixed: Facebook comment form not displayed if Override WordPress Settings is enabled
 - Modified: Registration Page template ( Added hooks before and after facebook registration form )
+- Added: 'wdfb_show_comment_form' Filter to turn off facebook comment form for a specific post id
 
 2.7.2 - 2014-06-20 - Umesh Kumar
 - Added: Read Events from Facebook shortcode and widget
