emoji support fb comments

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Change Log:
 ----------------------------------------------------------------------
 2.7.6 - 2014-09-8 - Umesh Kumar
 - Updated: Refresh auth tokens code to allow changes in API and user details
+- New:  Added support for importing emoji's in Facebook comments
 
 2.7.5 - 2014-07-30 - Umesh Kumar
 - Fixed: Facebook incorrect album id
