--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Change Log:
 2.7.7 - 2014-10-27 - Umesh Kumar
 - Fixed: Autoimport for comments
 - Fixed: Character encoding issue due to emojis
+- Fixed: Autoposting for posts published using Ajax
 
 2.7.6 - 2014-09-8 - Umesh Kumar
 - New:  Added support for importing emoji's in Facebook comments
