Applies new filter for OpenGraph data.
'wdfb-opengraph_apply_the_content_filter' filter returns a boolean
to allow or avoid the 'the_content' filter when pulling the og:image
from content.

This allows other plugins to decide if they want to pull the first
image from content rather than updating Ultimate Facebook every time
a compatibility needs to be addressed.

Resolves:
https://app.asana.com/0/16100167267638/19432655227141

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,9 @@ Contributor: Umesh Kumar
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+2.7.8 - 2014-10-27
+- New: 'wdfb-opengraph_apply_the_content_filter' filter added for developers. Returns a boolean.
+
 2.7.7 - 2014-10-27 - Umesh Kumar
 - Fixed: Autoimport for comments
 - Fixed: Character encoding issue due to emojis
