--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,10 @@ Contributor: Umesh Kumar
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+2.7.8 - 2014-11-20 - Umesh Kumar
+- Updated: Manual Publishing on Facebook for posts
+- Fixed: Warnings
+
 2.7.7 - 2014-10-27 - Umesh Kumar
 - Fixed: Autoimport for comments
 - Fixed: Character encoding issue due to emojis
