photo desc in shortcode and widget

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,10 +6,13 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 2.7.9 - 2014-12-6 - Umesh Kumar
+- New:   Option to display photo description in facebook albums
+- New:   Validate Facebook APP Secret with APP ID
+- New:   Allow users to display album pictures in widget using thickbox
+- Fixed: Album not displayed if no limit is specified in shortcode
 - Fixed: Userid and token issue ( Albums not showing up, due to invalid token )
-- Update: Facebook registration plugin expiry notice
 - Fixed: Permissions logic
-- New: Validate Facebook APP Secret with APP ID
+- Update: Facebook registration plugin expiry notice
 
 2.7.8 - 2014-11-24 - Umesh Kumar
 - New: Skip autopost option for individual posts
