--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,7 @@ Change Log:
 - Fixed:    Album not displayed if no limit is specified in shortcode
 - Fixed:    User id and token issue ( Albums not showing up, due to invalid token )
 - Fixed:    Permissions logic
+- Fixed:    Disable signup using Facebook if registration is disabled on site
 - Updated:  Facebook registration plugin expiry notice
 
 2.7.8 - 2014-11-24 - Umesh Kumar
