--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,9 @@ Contributor: Umesh Kumar
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
+2.7.9.1 - 2014-12-15 - Umesh Kumar
+- Fixed:    Notices and warnings
+
 2.7.9 - 2014-12-15 - Umesh Kumar
 - Updated:  Album widget styling change ( check changes before updating on live )
 - New:      Option to display photo description in facebook albums
