--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 2.7.9.1 - 2014-12-30 - Umesh Kumar
-- Fixed:    comment_text filter arguments warning
+- Fixed:    replaced comment_text filter with get_comment_text to fix notice and warnings
 
 2.7.9 - 2014-12-15 - Umesh Kumar
 - Updated:  Album widget styling change ( check changes before updating on live )
