--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,8 @@ Change Log:
 ----------------------------------------------------------------------
 2.7.9.1 - 2014-12-30 - Umesh Kumar
 - Fixed:    replaced comment_text filter with get_comment_text to fix notice and warnings
+- Fixed:    Fixed recent comment widget avatar checkbox in backend
+- Fixed:    Comments order in recent comment widget
 
 2.7.9 - 2014-12-15 - Umesh Kumar
 - Updated:  Album widget styling change ( check changes before updating on live )
