--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Change Log:
 ----------------------------------------------------------------------
 2.7.9.2 - 2015-01-19 - Umesh Kumar
 - Fixed:    Comment author facebook URL fixed
+- Fixed:    Network Settings - Override all blog settings and Preserve individual blog api settings
 
 2.7.9.1 - 2015-01-08 - Umesh Kumar
 - Fixed:    replaced comment_text filter with get_comment_text to fix notice and warnings
