--- a/changelog.txt
+++ b/changelog.txt
@@ -6,10 +6,11 @@ Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-2.7.9.6 - 2015-04-24 - Umesh Kumar
+2.7.9.6 - 2015-07-22 - Umesh Kumar
 - Fixed: Permissions issue for new APP
 - Fixed: Album selector not working
 - Fixed: Crop Image, if enabled in album widget/shortcode
+- Added: One CLick Registration to signup
 - Removed: Facebook Recommendation, FacePile, Activity Feed (Discontinued by Facebook)
 
 2.7.9.5 - 2015-04-24 - Umesh Kumar
