--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,13 @@
 Plugin Name: Ultimate Facebook
 Author: Ve Bailovity (Incsub)
-Contributor: Umesh Kumar
+Contributors: Umesh Kumar, Julien Zerbib
 
 Change Log:
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 
-2.7.9.7 - 2015-10-02 - Julien Zerbib
-- Added: User that can edit a post / page can chose the FB account they are publishing in if `Allow autoposting new posts to Facebook` is set to false
+2.7.10 - 2015-10-02 - Julien Zerbib
+- Added: User that can edit a post / page can chose the FB account he is publishing in if `Allow autoposting new posts to Facebook` is set to false
 - Added: Publishing Title, Account and Publish are saved when the post has a draft status
 
 2.7.9.6 - 2015-07-22 - Umesh Kumar
